# app/controllers/api/v1/cities_controller.rb
@@ -1,0 +1,92 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    # City api controller
+    class CitiesController < ApplicationController
+      before_action :authenticate_api_v1_user!
+      before_action :set_city, only: %i[show edit update destroy]
+
+      # GET /cities
+      # GET /cities.json
+      def index
+        @cities = City.all
+        render json: {
+          status: 'success',
+          data: @cities
+        }
+      end
+
+      # GET /cities/1
+      # GET /cities/1.json
+      def show
+        if @city
+          render_success
+        else
+          render json: @city.errors
+        end
+      end
+
+      # GET /cities/new
+      def new
+        @city = City.new
+      end
+
+      # GET /cities/1/edit
+      def edit; end
+
+      # POST /city
+      # POST /city.json
+      def create
+        @city = City.new(city_params)
+
+        if @city.save
+          render_success
+        else
+          render json: @city.errors
+        end
+      end
+
+      # PATCH/PUT /cities/1
+      # PATCH/PUT /cities/1.json
+      def update
+        respond_to do |format|
+          if @city.update(city_params)
+            format.html { redirect_to api_v1_city_path(@city),
+              notice: 'City was successfully updated.' }
+            format.json { render :show, status: :ok, location: @city }
+          else
+            format.html { render :edit }
+            format.json { render json: @city.errors, status: :unprocessable_entity }
+          end
+        end
+      end
+
+      # DELETE /cities/1
+      # DELETE /cities/1.json
+      def destroy
+        @city.destroy
+
+        render json: { notice: 'City was successfully removed.' }
+      end
+
+      private
+        # Use callbacks to share common setup or constraints between actions.
+        def set_city
+          @city = City.find(params[:id])
+        end
+
+        # Only allow a list of trusted parameters through.
+        def city_params
+          params.require(:city).permit(:name, :comments)
+        end
+
+        def render_success
+          render json: {
+            status: 'success',
+            data: @city
+          }
+        end
+    end
+  end
+end
